# twrk-back

./: .editorconfig  .gitignore  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
_docker/: Dockerfile
api/: urls.py  views.py
shop/: admin.py  apps.py  manager.py  models.py  serializers.py  signals.py  type.py  utils.py
shop/migrations/: 0001_initial.py  0002_product_description_product_image_product_price_and_more.py
test_shop/: settings.py  urls.py
test_shop/settings/: __init__.py  base.py  development.py
