[tool.poetry]
name = "twrk-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "twrk_back"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autoflake = "^2.0.0"
isort = "^5.11.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
